# coco_parking

./: .gitignore  ANALISIS_SCRUM.md  ARQUITECTURA_DATOS_PERFORMANCE.md  CONSULTORIA_DATOS.md  DATABASE_SCHEMA.md  DEFINITION_OF_DONE.md  PRODUCT_BACKLOG.md  README.md  SPRINT_PLANNING.md  backlog_aprobado.md
.github/workflows/: build-windows.yml  release-windows.yml
app/: .env.example  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: COMMAND_TABLE_MAP.md  Cargo.toml  QUERIES_BY_DOMAIN.md  README.md  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: db.rs  dev.rs  id_gen.rs  lib.rs  main.rs  permissions.rs  scanner.rs  state.rs
app/src-tauri/src/domains/: backup.rs  barcodes.rs  caja.rs  contracts.rs  custom_tariffs.rs  drive.rs  first_run.rs  metricas.rs  mod.rs  reportes.rs  roles.rs  vehiculos.rs
app/src/api/: auth.ts  backup.ts  barcodes.ts  caja.ts  contracts.ts  customTariffs.ts  dev.ts  firstRun.ts  index.ts  metricas.ts  reportes.ts  roles.ts  vehiculos.ts
app/src/components/: MetricCard.tsx  UpdateAvailableDialog.tsx
app/src/hooks/: useDebouncedValue.ts  useDefaultRates.ts  useFirstRunStatus.ts  useMyPermissions.ts  useParkingStore.test.ts  useParkingStore.ts  useSession.ts  (+1 more)
docs/: BUILD_WINDOWS_INSTALLER.md  WINDOWS_INSTALLATION_CHECKLIST.md
scripts/: check-report-range.sh  inspect-db.sh
security/docs/: DEVELOPER_ACCOUNT.md
(+61 files in other folders)
