[package]
name = "coco-parking"
version = "0.1.0"
description = "COCO Parking - Smart Parking Dashboard"
authors = ["COCO Parking"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "coco_parking_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rdev = "0.5"
rusqlite = { version = "0.33", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26"
rand = "0.8"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"
base64 = "0.22"
dotenvy = "0.15"
barcoders = { version = "2", features = ["image"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
